--- a/src/AdminDashboard/Components/Pages/Home.razor
+++ b/src/AdminDashboard/Components/Pages/Home.razor
@@ -1,4 +1,5 @@
 ﻿@page "/"
+@using Microsoft.AspNetCore.Authorization
 
 <PageTitle>Home</PageTitle>
 
@@ -39,11 +40,16 @@
 <br />
 <MudText Typo="Typo.h6" GutterBottom="true">Prerendering</MudText>
 <MudText Typo="Typo.body2" GutterBottom="true">
-    If you're exploring the features of .NET 8 Blazor,<br /> you might be pleasantly surprised to learn that each page is prerendered on the server,<br /> regardless of the selected render mode.<br /><br />
-    This means that you'll need to inject all necessary services on the server,<br /> even when opting for the wasm (WebAssembly) render mode.<br /><br />
-    This prerendering functionality is crucial to ensuring that WebAssembly mode feels fast and responsive,<br /> especially when it comes to initial page load times.<br /><br />
-    For more information on how to detect prerendering and leverage the RenderContext, you can refer to the following link:
-    <MudLink Href="https://github.com/dotnet/aspnetcore/issues/51468#issuecomment-1783568121" Target="_blank" Typo="Typo.body2" Color="Color.Primary">
+    If you're exploring the features of .NET 8 Blazor,<br /> you might be pleasantly surprised to learn that each page
+    is prerendered on the server,<br /> regardless of the selected render mode.<br /><br />
+    This means that you'll need to inject all necessary services on the server,<br /> even when opting for the wasm
+    (WebAssembly) render mode.<br /><br />
+    This prerendering functionality is crucial to ensuring that WebAssembly mode feels fast and responsive,<br />
+    especially when it comes to initial page load times.<br /><br />
+    For more information on how to detect prerendering and leverage the RenderContext, you can refer to the following
+    link:
+    <MudLink Href="https://github.com/dotnet/aspnetcore/issues/51468#issuecomment-1783568121" Target="_blank"
+        Typo="Typo.body2" Color="Color.Primary">
         More details
     </MudLink>
 </MudText>
@@ -52,7 +58,8 @@
 <MudText Typo="Typo.h6" GutterBottom="true">InteractiveAuto</MudText>
 <MudText Typo="Typo.body2">
     A discussion on how to achieve this can be found here:
-    <MudLink Href="https://github.com/dotnet/aspnetcore/issues/51468#issue-1950424116" Target="_blank" Typo="Typo.body2" Color="Color.Primary">
+    <MudLink Href="https://github.com/dotnet/aspnetcore/issues/51468#issue-1950424116" Target="_blank" Typo="Typo.body2"
+        Color="Color.Primary">
         More details
     </MudLink>
 </MudText>
