--- a/src/AdminDashboard/Components/Layout/MainLayout.razor
+++ b/src/AdminDashboard/Components/Layout/MainLayout.razor
@@ -33,7 +33,7 @@
     private bool _isDrawerOpen = true;
     private bool _isDarkMode = false;
     private MudThemeProvider _mudThemeProvider = null!;
-    private AdminDashboard.Themes.DarkTheme _theme = new AdminDashboard.Themes.DarkTheme();
+    private Components.DarkTheme _theme = new DarkTheme();
 
     private void DrawerToggle() => _isDrawerOpen = !_isDrawerOpen;
 
